--- a/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-sfc-developer.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/ovsdb/ovsdb-sfc-developer.adoc
@@ -1,10 +1,10 @@
-== OVSDB Service Function Chaining Developer Guide
+=== OVSDB Service Function Chaining Developer Guide
 
-=== Overview
+==== Overview
 
 TBD
 
-=== OVSDB Hardware VTEP Architecture
+==== OVSDB Hardware VTEP Architecture
 
 TBD
 
